examples/muxing: set timestamps in output audio packet

In particular, fix trac ticket #3231.